web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-2nd-lvl-lex-nested/output.txt
[SyntaxError]: Identifier has already been declared. (4,7)
4|  let foo = 1;
 |     ^
